<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_flash_on"
        android:icon="@drawable/ic_flash_on"
        android:title="@string/flash_on"
        android:showAsAction="always"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_flash_off"
        android:icon="@drawable/ic_flash_off"
        android:title="@string/flash_off"
        android:showAsAction="always"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info"
        android:showAsAction="never"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_instructions"
        android:icon="@drawable/ic_info"
        android:title="@string/instructions"
        android:showAsAction="never"
        app:showAsAction="never" />

    <item android:title="@string/settings"
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        app:showAsAction="never" />

</menu>
